--- a/index.html
+++ b/index.html
@@ -110,53 +110,13 @@
 
 
     <div class="con2" style="color: black; background-color:; padding: 4% 8% 8% 8%; padding-bottom: 2rem;">
-      <h1 class="display-4 text-center" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
+      <h1 class="display-4 text-center" style="padding-top: 4%; text-align: center; color: #133544; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Our Services</h1>
       <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-        CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</h4><br>
+        We provide the best possible senior care tailored to the individual needs of each client we serve.</h4><br>
       <br>
-      <!--<div class="row">
-        <div class="col text-centre padservices" style="display: ; justify-content: center;">
-          <img class="imgservices" src="images/picbutton.png" height="160" alt="CLHC">
-          <h3 class="" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1rem;">
-            HomeCare Services
-          </h3>
-          <h5 class="ourservicep" style="text-align: center; color: #272727; font-size: .6rem;
-          font-family: 'Quicksand', sans-serif; font-weight: 700;">
-            CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent
-            in their home.</h5>
-        </div>
-        <div class="col text-centre" style="display:; justify-content: center;">
-          <img class="imgservices" src="images/picbutton.png" height="160" alt="CLHC">
-          <h3 class="" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1rem;">
-            Companion Care
-          </h3>
-          <h5 class="ourservicep" style="text-align: center; color: #272727; font-size: .6rem;
-        font-family: 'Quicksand', sans-serif; font-weight: 700;">
-            CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent
-            in their home.</h5>
-        </div>
-        <div class="col text-centre" style="display:; justify-content: center;">
-          <img class="imgservices" src="images/picbutton.png" height="160" alt="CLHC">
-          <h3 class="" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1rem;">
-            Personal Care
-          </h3>
-          <h5 class="ourservicep" style="text-align: center; color: #272727; font-size: .6rem;
-          font-family: 'Quicksand', sans-serif; font-weight: 700;">
-            CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent
-            in their home.</h5>
-        </div>
-        <div class="col text-centre" style="display:; justify-content: center;">
-          <img class="imgservices" src="images/picbutton.png" height="160" alt="CLHC">
-          <h3 class="" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1rem;">
-            End Of Life Care
-          </h3>
-          <h5 class="ourservicep" style="text-align: center; color: #272727; font-size: .6rem;
-            font-family: 'Quicksand', sans-serif; font-weight: 700;">
-            CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent
-            in their home.</h5>
-        </div>
-      </div>-->
+
+
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
@@ -237,63 +197,6 @@
       </div>
     </div>
 
-
-    <!--<div class="col-sm" style="padding-top: 4rem;">
-        <h1>Comfort in your Home
-          from Delaware’s Finest
-          Home Care Provider.</h1>
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <br> <br><br> <br><br> <br><br> <br><br> <br><br> <br>
-    </div>
-    <div class="con1" style="padding-top: 6rem;" <div class="jumbotron con1">
-      <h1 class="display-4">Welcome!</h1>
-      <p class="lead">Comfort Loving Home Care agency, the home of comfort. Welcome to Pennsylvenia’s Finest Home Care Provider.</p>
-      <hr class="my-4">
-      <p>Comfort Loving Home Care is dedicated to providing the highest quality in home health and personal care services for the
-        valued patients in Delaware.</p>
-      <p class="lead">
-        <a style=" font-family: 'Quicksand', sans-serif; font-weight: 700; background-color: #3d4122;
-        padding-left: 16px; padding-right: 16px; color: white; border-radius: 15px;" class="btn btn-sm" href="#" role="button">Learn more</a>
-      </p>
-    </div>-->
-
-    <!--<div class="" style="color: white; background-color:; padding: 2rem 6%; padding-bottom: 2rem;">
-      <div class="row">
-        <div class="col-sm cardspad">
-          <div class="card cardspadbottom" style="background-color: #1c2e69;">
-            <img class="card-img-top" src="https://www.herzing.edu/sites/default/files/styles/fp_960_480/public/images/blog/nursing_job_0.png.webp?itok=cfHQU2ry" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Respite Services</h5>
-              <p class="card-text">Get temporary relief for your family caregivers while we handle the busy task of caring.</p>
-              <br><a href="#" style="font-family: 'Quicksand', sans-serif; font-weight: 700; background-color: white; border: 4px solid white; border-radius: 25px;" class="btn btn-sm">&nbsp;Learn more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm cardspad">
-          <div class="card" style="background-color: #1c2e69;">
-            <img class="card-img-top" src="https://www.herzing.edu/sites/default/files/styles/fp_960_480/public/images/blog/nursing_job_0.png.webp?itok=cfHQU2ry" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">In-Home Services</h5>
-              <p class="card-text">This program helps developmentally challenged people to improve their home lifestyles.</p>
-              <br><a href="#" style="font-family: 'Quicksand', sans-serif; font-weight: 700; background-color: white; border: 4px solid white; border-radius: 25px;" class="btn btn-sm">&nbsp;Learn more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm cardspad">
-          <div class="card" style="background-color: #1c2e69;">
-            <img class="card-img-top" src="https://www.herzing.edu/sites/default/files/styles/fp_960_480/public/images/blog/nursing_job_0.png.webp?itok=cfHQU2ry" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Transportation Services</h5>
-              <p class="card-text">A big part of the essential assistance we provide is the transportation solutions to your needs.</p>
-              <br><a href="#" style="font-family: 'Quicksand', sans-serif; font-weight: 700; background-color: white; border: 4px solid white; border-radius: 25px;" class="btn btn-sm">&nbsp;Learn more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>-->
 
     <div class="con1">
       <div class="row" style="margin: 0 10% 0 10%;">
