--- a/aboutus.html
+++ b/aboutus.html
@@ -53,6 +53,7 @@
             <a href="aboutus.html" style="color: white;" class="nav-item nav-link float-right">About Us</a>
             <a href="services.html" style="color: white;" class="nav-item nav-link">Services</a>
             <a href="homecare.html" style="color: white;" class="nav-item nav-link">Careers</a>
+            <a href="contactus.html" style="color: white;" class="nav-item nav-link">Contact Us</a>
             <a href="7178247199" style="color: white;" class="nav-item nav-link lastnavlink" style="">
               <span style="border: 4px solid #77c9e6; border-radius: 15px; padding: 6px 15px;
               font-family: 'Quicksand', sans-serif; font-weight: 700;">
@@ -132,6 +133,18 @@
 </section>
 </div>
 
+<div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/nqpgJm7/CLHC-banners-plai.png');" class="col-sm  text-center">
+  <br>
+  <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center;
+  color: white; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:700;">
+    Are you interested in our Respite Care services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
+    <br><a href="contactus.html" class="btn btn-md contactusbtn text-center" role="button" aria-disabled="true"
+    style="border: 4px solid white;
+    border-radius: 25px; color: white;
+    font-family: 'Quicksand', sans-serif; font-weight: 700; color: white !important;" class="btn">&nbsp;&nbsp;
+    Contact us&nbsp;</a>
+    <br><br>
+</div>
       <!--<footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
         <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
       </footer>-->
