--- a/companionship.html
+++ b/companionship.html
@@ -53,6 +53,7 @@
             <a href="aboutus.html" style="color: white;" class="nav-item nav-link float-right">About Us</a>
             <a href="services.html" style="color: white;" class="nav-item nav-link">Services</a>
             <a href="homecare.html" style="color: white;" class="nav-item nav-link">Careers</a>
+            <a href="contactus.html" style="color: white;" class="nav-item nav-link">Contact Us</a>
             <a href="7178247199" style="color: white;" class="nav-item nav-link lastnavlink" style="">
               <span style="border: 4px solid #77c9e6; border-radius: 15px; padding: 6px 15px;
               font-family: 'Quicksand', sans-serif; font-weight: 700;">
