--- a/homecare.html
+++ b/homecare.html
@@ -53,6 +53,7 @@
             <a href="aboutus.html" style="color: white;" class="nav-item nav-link float-right">About Us</a>
             <a href="services.html" style="color: white;" class="nav-item nav-link">Services</a>
             <a href="homecare.html" style="color: white;" class="nav-item nav-link">Careers</a>
+            <a href="contactus.html" style="color: white;" class="nav-item nav-link">Contact Us</a>
             <a href="7178247199" style="color: white;" class="nav-item nav-link lastnavlink" style="">
               <span style="border: 4px solid #77c9e6; border-radius: 15px; padding: 6px 15px;
               font-family: 'Quicksand', sans-serif; font-weight: 700;">
@@ -63,7 +64,7 @@
     </nav>
     <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;"
     src="https://i.ibb.co/HxPZxRL/CLHC-banners-Careers.png" class="cover-image">
-    <h4 style="padding: 5% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');
+    <h4 style="padding: 5% 15% 7% 15%; margin-bottom: 0; color: black; background-color: white;
     text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer
     <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly
     competitive pay.<br><br>
@@ -107,6 +108,19 @@
   </div>
   <div id="status"></div>
   </section>
+  </div>
+
+  <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/nqpgJm7/CLHC-banners-plai.png');" class="col-sm  text-center">
+    <br>
+    <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center;
+    color: white; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:700;">
+      Are you interested in our Respite Care services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
+      <br><a href="contactus.html" class="btn btn-md contactusbtn text-center" role="button" aria-disabled="true"
+      style="border: 4px solid white;
+      border-radius: 25px; color: white;
+      font-family: 'Quicksand', sans-serif; font-weight: 700; color: white !important;" class="btn">&nbsp;&nbsp;
+      Contact us&nbsp;</a>
+      <br><br>
   </div>
 
   <footer class="footer" style="padding: 3% 15% 2% 15%; background-color: black;">
