--- a/contactus.html
+++ b/contactus.html
@@ -82,7 +82,7 @@
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   <i class="fa-solid fa-phone-volume"></i> Telephone</span><br> +717-824-7199<br><br>
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
-                  <i class="fa-solid fa-phone-volume"></i> Email</span><br> comfortlovinghomecare@gmail.com</h4><br><br>
+                  <i class="fa-solid fa-phone-volume"></i> Email</span><br> comfortlovinghomecare@gmail.com</h4><br>
               <iframe class=""
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk"
                 width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
